Functional syntax highlighting using Shiki To get this to work, I had to revert to Docusaurus 2, which doesn't really seem to make a difference. The benefits of this are quite obvious, tho, as we can leverage our existing highlighting which is less effort, and also far more detailed in regards to how it highlights. Issue right now is that we no longer have the magic comments, which completely breaks the "Table Freezing" page, likely more.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -70,3 +70,7 @@ p, h1, h2, h3, h4, a {
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.shiki.github-light {
+  display: none;
+}
